--- a/Alphasoft/Views/Menus/Index.cshtml
+++ b/Alphasoft/Views/Menus/Index.cshtml
@@ -17,6 +17,7 @@
                     <th>Name</th>
                     <th>ControllerName</th>
                     <th>ActionName</th>
+                    <th>Dropdown Type</th>
                     <th>Is Active</th>
                     <th>Parent</th>
                     <th></th>
