--- a/Alphasoft/Views/Products/Index.cshtml
+++ b/Alphasoft/Views/Products/Index.cshtml
@@ -23,6 +23,7 @@
                     <th>Short Description</th>
                     <th>Description</th>
                     <th>Relise Date</th>
+                    <th>Is Popular</th>
                     <th></th>
                 </tr>
             </thead>
