--- a/Alphasoft/Views/Shared/_Layout.cshtml
+++ b/Alphasoft/Views/Shared/_Layout.cshtml
@@ -15,6 +15,10 @@
     <link href="~/lib/DataTables/datatables.min.css" rel="stylesheet" />
     <link href="~/lib/select2-4.0.10/dist/css/select2.css" rel="stylesheet" />
     <link href="~/lib/summernote/dist/summernote.css" rel="stylesheet" />
+
+    <!-- bootstrap toggle -->
+    <link href="~/lib/bootstrap-toggle/css/bootstrap-toggle.min.css" rel="stylesheet" />
+
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/css/custom.css" rel="stylesheet" />
 </head>
@@ -172,7 +176,7 @@
             </ul>
         </section>
 
-        
+
 
         <section style="width: 85%; float: right; margin-top: 20px; font-size: 80%; font-weight: 600;">
             <div class="body-content">
@@ -200,6 +204,9 @@
     <script src="~/js/ObjectifyForm.js"></script>
     <script src="~/js/checkImageSize.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <!-- bootstrap toggle -->
+    <script src="~/lib/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
 
     @RenderSection("Styles", required: false)
     @RenderSection("Scripts", required: false)
