--- a/Alphasoft/Views/Menus/_Create.cshtml
+++ b/Alphasoft/Views/Menus/_Create.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DropdownType"></label>
-                <select asp-for="DropdownType" asp-items="@Html.GetEnumSelectList<DropdownList>()"></select>
+                <select asp-for="DropdownType" asp-items="@Html.GetEnumSelectList<DropdownList>()" class="form-control"></select>
                 <span asp-validation-for="DropdownType" class="text-danger"></span>
             </div>
         </div>
@@ -35,33 +35,53 @@
             <div class="form-group">
                 <label asp-for="IsActive"></label>
                 <br />
-                <input asp-for="IsActive" type="radio" value="True" /> True
-                <input asp-for="IsActive" type="radio" value="False" /> False
-                <span asp-validation-for="IsActive" class="text-danger"></span>
+                <input asp-for="IsActive" type="hidden" value="true" />
+                <input id="toggle_checkbox" type="checkbox" data-toggle="toggle" data-onstyle="success" data-offstyle="danger" checked>
             </div>
         </div>
     </div>
     <div id="alert"></div>
     <button class="btn btn-success form-control" type="submit">Save</button>
 </form>
+
 <script>
-    $("#menue-createForm").on("submit", function (e) {
-        e.preventDefault();
-
-        let data = objectifyForm($(this).serializeArray());
-
-        console.log(data);
-
-        $.ajax({
-            url: "/Menus/Create",
-            data: data,
-            type: "POST",
-            success: function (response) {
-                $("#menu-createFormDiv").html(response);
-                dataTable.fnFilter();
-            },
+    (function () {
+        $('#toggle_checkbox').bootstrapToggle({
+            on: 'Enabled',
+            off: 'Disabled',
+            width: 100
         });
-    });
+
+        $('#toggle_checkbox').change(function () {
+            let value = $('#toggle_checkbox')[0].checked;
+
+            if (value == true) {
+                $('#IsActive').val(true);
+                $('#IsActive').attr('data-val', true);
+            }
+
+            if (value == false) {
+                $('#IsActive').val(false);
+                $('#IsActive').attr('data-val', false);
+            }
+        });
+
+        $("#menue-createForm").on("submit", function (e) {
+            e.preventDefault();
+
+            let data = objectifyForm($(this).serializeArray());
+
+            $.ajax({
+                url: "/Menus/Create",
+                data: data,
+                type: "POST",
+                success: function (response) {
+                    $("#menu-createFormDiv").html(response);
+                    dataTable.fnFilter();
+                },
+            });
+        });
+    })();
 </script>
 
 
