--- a/Alphasoft/Views/Clients/_Create.cshtml
+++ b/Alphasoft/Views/Clients/_Create.cshtml
@@ -75,6 +75,7 @@
             success: function (response) {
                 $("#client-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#client-createModal").modal('hide');
             }
         });
     });
