--- a/Alphasoft/Views/Companies/_Create.cshtml
+++ b/Alphasoft/Views/Companies/_Create.cshtml
@@ -146,6 +146,7 @@
             success: function (response) {
                 $("#company-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#companies-createModal").modal('hide');
             }
         });
     });
