--- a/Alphasoft/Views/Contactus/_Create.cshtml
+++ b/Alphasoft/Views/Contactus/_Create.cshtml
@@ -46,6 +46,7 @@
 
                 $("#contactus-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#contactus-createModal").modal('hide');
             }
 
 
