--- a/Alphasoft/Views/Designations/_Create.cshtml
+++ b/Alphasoft/Views/Designations/_Create.cshtml
@@ -30,6 +30,7 @@
             success: function (response) {
                 $("#designation-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#designation-createModal").modal('hide');
             }
         });
     });
