--- a/Alphasoft/Views/ProductCategories/_Create.cshtml
+++ b/Alphasoft/Views/ProductCategories/_Create.cshtml
@@ -29,6 +29,7 @@
             success: function (response) {
                 $("#productCategories-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#productCategories-createModal").modal('hide');
             },
         });
     });
