--- a/Alphasoft/Views/ProductCategories/_Edit.cshtml
+++ b/Alphasoft/Views/ProductCategories/_Edit.cshtml
@@ -1,6 +1,5 @@
 ﻿@model ProductCategory
 
-
 <form id="productCategories-editForm" class="createForm">
     <div class="row">
         <div class="col-md-12">
@@ -10,9 +9,7 @@
                 <input asp-for="Name" type="text" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-
         </div>
-
     </div>
     <div id="alert"></div>
     <button class="btn btn-success form-control" type="submit">Save</button>
@@ -29,8 +26,8 @@
             success: function (response) {
                 $("#productCategories-editFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#productCategories-editModal").modal('hide');
             }
         });
-
     });
 </script>
