--- a/Alphasoft/Views/WhyChooseUs/_Create.cshtml
+++ b/Alphasoft/Views/WhyChooseUs/_Create.cshtml
@@ -53,6 +53,7 @@
             success: function (response) {
                 $("#choseus-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#chose-createModal").modal('hide');
             }
         });
 
