--- a/Alphasoft/Views/Banners/_Create.cshtml
+++ b/Alphasoft/Views/Banners/_Create.cshtml
@@ -13,19 +13,19 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label asp-for="SolganOne"></label>
-                    <textarea class="sologan1"  asp-for="SolganOne"></textarea>
+                    <textarea class="sologan1" asp-for="SolganOne"></textarea>
                     <span asp-validation-for="SolganOne" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="SolganTwo"></label>
-                    <textarea class="sologan2"  asp-for="SolganTwo"></textarea>
+                    <textarea class="sologan2" asp-for="SolganTwo"></textarea>
                     <span asp-validation-for="SolganTwo" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="SolganThree"></label>
-                    <textarea class="sologan3"asp-for="SolganThree"></textarea>
+                    <textarea class="sologan3" asp-for="SolganThree"></textarea>
                     <span asp-validation-for="SolganThree" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -34,15 +34,13 @@
                     <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
             </div>
-
         </div>
-
-
         <div id="alert"></div>
         <button class="btn btn-success form-control" type="submit">Save</button>
     </form>
 
 <script>
+  
 
     $(".sologan1").summernote({
         height:60
@@ -72,6 +70,7 @@
             success: function (response) {
                 $("#banner-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#banner-createModal").modal('hide');
             }
         });
     });
