--- a/Alphasoft/Views/Banners/_Edit.cshtml
+++ b/Alphasoft/Views/Banners/_Edit.cshtml
@@ -77,6 +77,7 @@
             success: function (response) {
                 $("#banner-editFormDiv").html(response);
                 dataTable.fnFilter();
+               $("#banner-editModal").modal('hide');
             }
         });
     });
