--- a/Alphasoft/Views/Blogs/_Edit.cshtml
+++ b/Alphasoft/Views/Blogs/_Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Blog
+
 <form id="blog-editForm" class="createForm">
     <div class="row">
         <div class="col-md-12">
@@ -8,7 +9,6 @@
                 <input asp-for="Thumbnail" type="text" class="form-control" />
                 <span asp-validation-for="Thumbnail" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Title"></label>
                 <input asp-for="Title" type="text" class="form-control" />
@@ -21,15 +21,12 @@
             </div>
         </div>
     </div>
-
     <div id="alert"></div>
     <button class="btn btn-success form-control" type="submit">Save</button>
 </form>
 
 <script>
-
     $("#blog-editForm").on("submit", function (e) {
-
         e.preventDefault();
         let data = objectifyForm($(this).serializeArray());
         $.ajax({
@@ -37,14 +34,10 @@
             type: "POST",
             data: data,
             success: function (response) {
-
                 $("#blog-editFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#blogs-editModal").modal('hide');
             }
-
-
         });
-
     });
-
 </script>
