--- a/Alphasoft/Views/Clients/_Edit.cshtml
+++ b/Alphasoft/Views/Clients/_Edit.cshtml
@@ -79,7 +79,8 @@
             data: formData,
             success: function (response) {
                 $("#client-editFormDiv").html(response);
-                    dataTable.fnFilter();
+                dataTable.fnFilter();
+                $("#clients-editModal").modal('hide');
             }
         });
     });
