--- a/Alphasoft/Views/Companies/_Edit.cshtml
+++ b/Alphasoft/Views/Companies/_Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Company
+
     <form id="company-editForm" class="createForm">
         <div class="row">
             <div class="col-md-4">
@@ -13,7 +14,6 @@
                     <input asp-for="Slogan" type="text" class="form-control" />
                     <span asp-validation-for="Slogan" class="text-danger"></span>
                 </div>
-
             </div>
             <div class="col-md-4">
                 <div class="form-group">
@@ -66,7 +66,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
@@ -83,7 +82,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-9">
                 <div class="form-group">
@@ -113,16 +111,10 @@
                     <img id="imgpreview" src="#" />
                 </div>
             </div>
-
-
         </div>
         <div id="alert"></div>
         <button class="btn btn-success form-control" type="submit">Save</button>
     </form>
-
-
-
-
 <script>
     $("#company-editForm").on("submit", function (e) {
         e.preventDefault();
@@ -143,6 +135,7 @@
             success: function (response) {
                 $("#company-editFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#companies-editModal").modal('hide');
             }
         });
     });
