--- a/Alphasoft/Views/Faqs/_Create.cshtml
+++ b/Alphasoft/Views/Faqs/_Create.cshtml
@@ -1,30 +1,27 @@
 ﻿@model Faq
-
-<form id="faq-createForm" class="createForm">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="form-group">
-                <label asp-for="Question"></label>
-                <input asp-for="Question" type="text" class="form-control" />
-                <span asp-validation-for="Question" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer"></label>
-                <textarea id="answer" asp-for="Answer"></textarea>
-                <span asp-validation-for="Answer" class="text-danger"></span>
+   <form id="faq-createForm" class="createForm">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="Question"></label>
+                    <input asp-for="Question" type="text" class="form-control" />
+                    <span asp-validation-for="Question" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Answer"></label>
+                    <textarea id="answer" asp-for="Answer"></textarea>
+                    <span asp-validation-for="Answer" class="text-danger"></span>
+                </div>
             </div>
         </div>
-    </div>
-    <div id="alert"></div>
-    <button class="btn btn-success form-control" type="submit">Save</button>
-</form>
+        <div id="alert"></div>
+        <button class="btn btn-success form-control" type="submit">Save</button>
+    </form>
 
 <script>
-
     $("#answer").summernote({
         height:120
     });
-  
     $("#faq-createForm").on("submit", function (e) {
 
         e.preventDefault();
@@ -37,14 +34,9 @@
             success: function (response) {
 
                 $("#faq-createFormDiv").html(response);
-                 dataTable.fnFilter();
+                dataTable.fnFilter();
+                  $("#faq-createModal").modal('hide');
             }
-
-
-
         });
-
     });
-
-
 </script>
