--- a/Alphasoft/Views/HostingPlans/_Edit.cshtml
+++ b/Alphasoft/Views/HostingPlans/_Edit.cshtml
@@ -77,6 +77,7 @@
                 success: function (response) {
                     $("#hosting-editFormDiv").html(response);
                     dataTable.fnFilter();
+                    $("#hosting-editModal").modal('hide');
                 }
             });
         });
