--- a/Alphasoft/Views/Menus/_Edit.cshtml
+++ b/Alphasoft/Views/Menus/_Edit.cshtml
@@ -79,9 +79,7 @@
 
         $("#menu-editForm").on("submit", function (e) {
             e.preventDefault();
-
             let data = objectifyForm($(this).serializeArray());
-
             $.ajax({
                 url: "/Menus/Edit",
                 type: "POST",
@@ -89,6 +87,7 @@
                 success: function (response) {
                     $("#menu-editFormDiv").html(response);
                     dataTable.fnFilter();
+                    $("#menu-editModal").modal('hide');
                 }
             });
 
