--- a/Alphasoft/Views/OurTeams/_Create.cshtml
+++ b/Alphasoft/Views/OurTeams/_Create.cshtml
@@ -105,6 +105,7 @@
             success: function (response) {
                 $("#ourTeam-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#ourTeam-createModal").modal('hide');
             }
         });
      });
