--- a/Alphasoft/Views/OurTeams/_Edit.cshtml
+++ b/Alphasoft/Views/OurTeams/_Edit.cshtml
@@ -100,6 +100,7 @@
             success: function (response) {
                 $("#ourTeam-editFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#ourTeams-editModal").modal('hide');
             }
         })
 
