--- a/Alphasoft/Views/ServiceCategories/_Create.cshtml
+++ b/Alphasoft/Views/ServiceCategories/_Create.cshtml
@@ -24,6 +24,7 @@
             success: function (response) {
                 $("#serviceCategory-createFormDiv").html(response);
                 dataTable.fnFilter();
+                $("#serviceCategory-createModal").modal('hide');
             }
         });
     });
